--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/react-native": "^12.8.1",
     "install": "^0.13.0",
     "next": "15.0.2",
     "next-mdx-remote": "^5.0.0",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-test-renderer": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
